# crates-io-saca-benchmark

./: Cargo.toml  LIBSAIS_BWT_AUX.md  README.md  justfile  measurements.txt  results.json
plot/: main.py  pyproject.toml
src/: main.rs
