[package]
name = "benchmark_crates_io_sacas"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libsais = { version = "0.1.0", git = "https://github.com/feldroop/libsais-rs" }
sais_drum = { version = "0.1.0", git = "https://github.com/feldroop/sais-drum" }
divsufsort = "2.0"
suffix = "1.3"
bio = "2.3"
psacak = "0.1"
rayon = "1.3"
windows = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
