[package]
name = "benchmark_crates_io_sacas"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.3"
num-traits = "0.2.19"
serde_json = "1"
serde = "1"

bio = "3"
divsufsort = "2.0"
libsais = "0.2.0"
libsufr = "0.7"
psacak = "0.1"
sais_drum = "0.1.1"
suffix = "1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
